plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wedit'
version = '0.0.1-SNAPSHOT'
description = 'Backend for wedit'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

    // coolSMS
    implementation 'net.nurigo:sdk:4.2.7'

    // Spring Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // Prometheus
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    // P6Spy
    implementation 'p6spy:p6spy:3.9.1'

    // AWS S3 PreSigner
    implementation platform('software.amazon.awssdk:bom:2.20.142')
    implementation 'software.amazon.awssdk:s3'

    // Apache Commons Text
    implementation 'org.apache.commons:commons-text:1.13.1'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // OAuth2 Client
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Spring Security
   implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // H2
//    runtimeOnly 'com.h2database:h2'

    // MySQL Driver
    runtimeOnly 'com.mysql:mysql-connector-j:8.1.0'

    // Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    // commons-lang3 (CVE 취약점 방지)
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // JUint
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

tasks.named('test') {
	useJUnitPlatform()
}